# cpp-raylib-template

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
scripts/: build.sh  clean.sh  globals.sh  make.sh  release.sh  run.sh
src/: Main.cpp  RAYLIB_TEST.c  RAYLIB_TEST.cpp  RAYLIB_TEST.h  functions.c  functions.cpp  utility_functions.c
src/Classes/: Test.cpp
src/includes/: FUNCTIONS.h  RAYLIB_TEST.h  Test.h  app.h  common.h  std.h
